src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-dwF1000-dhP0.5-b-wfsAN-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault column width: F1000\ndefault window height: P0.5\nborder on\nwant fullscreen: AN\ntabbed"
expression: snapshot
---
initial configure:
size: 1000 × 328, bounds: 1231 × 680, states: []

post-map configures:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1000 × 328, bounds: 1231 × 680, states: [Activated]
